--- a/JavaScriptCourse/Lesson_2/Task4.html
+++ b/JavaScriptCourse/Lesson_2/Task4.html
@@ -10,11 +10,24 @@
 
 <body>
     <script>
+
         'use strict';
-        let a = 2;
-        let x = 1 + (a *= 2);
-        // 1 действие a = a * 2 = 4;
-        // 2  действие 4 + 1 = 5;
+
+        function addition(a, b) {
+            return a + b;
+        }
+
+        function subtraction(a, b) {
+            return a - b;
+        }
+
+        function multiplication(a, b) {
+            return a * b;
+        }
+
+        function division(a, b) {
+            return a / b;
+        }
     </script>
 </body>
 
